testing/mitra: upgrade to 4.1.0

--- a/testing/mitra/APKBUILD
+++ b/testing/mitra/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=mitra
-pkgver=3.23.0
+pkgver=4.1.0
 pkgrel=0
 _mitraweb=$pkgver #"${pkgver%.*}.0"
 pkgdesc="ActivityPub microblogging platform written in Rust"
@@ -43,6 +43,7 @@ prepare() {
 
 build() {
 	RUSTFLAGS="--cfg=ammonia_unstable" \
+	DEFAULT_CONFIG_PATH="/etc/mitra/config.yaml" \
 	cargo auditable build $_cargo_opts --release
 
 	cd "$srcdir/mitra-web"
@@ -74,7 +75,6 @@ check() {
 
 package() {
 	install -Dm755 target/release/mitra -t "$pkgdir"/usr/bin
-	install -Dm755 target/release/mitractl -t "$pkgdir"/usr/bin
 
 	mkdir -p "$pkgdir"/usr/share/webapps
 	cp -r "$srcdir"/mitra-web/dist \
@@ -88,14 +88,14 @@ package() {
 
 	install -Dm640 -g mitra "$srcdir"/config.yaml -t "$pkgdir"/etc/mitra
 	install -dm755 -o mitra -g mitra "$pkgdir"/var/lib/mitra
-	install -Dm644 "$srcdir"/init.sql -t "$pkgdir"/var/lib/mitra
+	install -Dm644 "$srcdir"/init.sql -t "$pkgdir"/usr/share/mitra
 	install -Dm755 "$srcdir"/mitra.initd "$pkgdir"/etc/init.d/mitra
 }
 
 sha512sums="
-f2ef96af6041521238c846ce0a7b50428984f79d2d8b4b6ce2fce0c476707647391490a98b2c2f7fb04186f778cd8d0f25dabef73e3e55e055db2f0de70143b2  mitra-3.23.0.tar.gz
-86f9c1fe314de84410dca330beeb14f5e86bc370ad7da18b321bae2544cd83f006d95cc95fff519fc95fe5940295e6a3670d3718dcf7d1b348c256c86ed8fd50  mitra-web-3.23.0.tar.gz
-691f84f5dfdddc176e75792ab03ff167054246e75ced51be47a89f405ae55ebe5eb6280b73c1b467b5ecbe8539f6108fb3d86873d50fcc4f4b8c5b182632acb0  mitra.initd
+e973e7a9c6a34b2e331cc5ce085165b4905a15adfca51e75761c9909e666dde11e06838d9e63a4b7da32b63e7016b39cde4c557bc8f23bf6eea5fc4dcee37223  mitra-4.1.0.tar.gz
+1c8230cab0f21b1d1008be790ba0361f798aad5055d03905510ef2f7ca7d141345af6c02032763dec99457a6365c187144288f2b44e72a4050c04d8981edd2c7  mitra-web-4.1.0.tar.gz
+549646eff4fcc03109d6eddb6f2540f4d0d3f5994273c00f688ea616a4f02c6866b4ef88fdc00e8fb06e50d7d22cd882beb40926e9931d16fa0332ad06f6a677  mitra.initd
 180a47f5072534418b4aac3ce7c885a4f7e4dc38aca80d6d81c79848d12fbe24799788c3575bd195030a10da5e0372f87fa2809a4ef99a48eaa6df52f4d053dd  init.sql
-c69fba9cc376fb2a92c64a5d9994be4ddadc011539855b7a93fc351a393dfa072d85007a3049e57359db705db6ab33ec1bb2c207cc8e57a8638141ff74fb3843  config.yaml
+a6f9e63fcba0a897cc252caf62f44a2096c34341cf48d1ec4f0a8f3679f8d25a557c380a76d05fafc5d04ee58a3a918ede5e3721aa513073bb9fe0d1d00cf29c  config.yaml
 "
