--- a/testing/mitra/config.yaml
+++ b/testing/mitra/config.yaml
@@ -79,11 +79,11 @@ registration:
 
 # Data retention parameters.
 # Objects will be deleted after the specified number of days.
-retention:
-  # Remote posts with which local accounts didn't interact
-  extraneous_posts: 50
-  # Remote accounts without posts
-  empty_profiles: 150
+#retention:
+#  # Remote posts with which local accounts didn't interact
+#  extraneous_posts: 15
+#  # Remote accounts without posts
+#  empty_profiles: 30
 
 # Federation parameters
 #federation:
@@ -96,12 +96,9 @@ retention:
 #  #onion_proxy_url: 'socks5h://127.0.0.1:9050'
 #  # Proxy for outgoing requests to .i2p targets
 #  #i2p_proxy_url: 'socks5h://127.0.0.1:4447'
-
-# Lists of blocked and allowed domains (allowlist has higher priority).
-# Wildcard patterns are supported. Example: *.domain.example
-# For more fine-grained control, use federation filter system.
-#blocked_instances: []
-#allowed_instances: []
+#  # Timeouts (seconds)
+#  #fetcher_timeout: 30
+#  #deliverer_timeout: 10
 
 # OpenMetrics endpoint (/metrics)
 #metrics:
