community/py3-jwt: upgrade to 2.10.1, fix installer .whl filename
https://github.com/jpadilla/pyjwt/blob/2.10.1/CHANGELOG.rst

Also fix packaging error due to changed .whl filename with setuptools
>= 75.3.1.

```
FileNotFoundError: [Errno 2] No such file or directory: '.dist/PyJWT-2.9.0-py3-none-any.whl'
```

--- a/community/py3-jwt/APKBUILD
+++ b/community/py3-jwt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Eivind Uggedal <eu@eju.no>
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=py3-jwt
-pkgver=2.9.0
+pkgver=2.10.1
 pkgrel=0
 pkgdesc="Python3 JSON Web Token implementation"
 url="https://github.com/jpadilla/pyjwt"
@@ -32,9 +32,9 @@ check() {
 
 package() {
 	python3 -m installer -d "$pkgdir" \
-		.dist/PyJWT-$pkgver-py3-none-any.whl
+		.dist/pyjwt-$pkgver-py3-none-any.whl
 }
 
 sha512sums="
-c49dd32e76321c3354c50849e50a8b3f3f91f370bdfe60ea7a3c97f0426b5fa813aba4d223a5b18213b45d6372e966a58b7aa5a16e294d480173e73eda7b3ff9  py3-jwt-2.9.0.tar.gz
+9fc11a70960122799280669634bfeb9035222b9bda01eb31219d8f9a16d016a70617472ccd6873ceccc2124112dabfe160933d8eb24a096c14940625909dbe65  py3-jwt-2.10.1.tar.gz
 "
