community/alpine: build with gettext-tiny-dev
Resolves build error when invoking autoreconf (thanks Celeste).

```
autoreconf: running: aclocal --force --install -I m4
aclocal: installing 'm4/build-to-host.m4' from '/usr/share/aclocal/build-to-host.m4'
aclocal: overwriting 'm4/gettext.m4' with '/usr/share/aclocal/gettext.m4'
aclocal: installing 'm4/host-cpu-c-abi.m4' from '/usr/share/aclocal/host-cpu-c-abi.m4'
aclocal: overwriting 'm4/iconv.m4' with '/usr/share/aclocal/iconv.m4'
aclocal: overwriting 'm4/lib-ld.m4' with '/usr/share/aclocal/lib-ld.m4'
aclocal: overwriting 'm4/lib-link.m4' with '/usr/share/aclocal/lib-link.m4'
aclocal: overwriting 'm4/lib-prefix.m4' with '/usr/share/aclocal/lib-prefix.m4'
aclocal: overwriting 'm4/libtool.m4' with '/usr/share/aclocal/libtool.m4'
aclocal: overwriting 'm4/ltoptions.m4' with '/usr/share/aclocal/ltoptions.m4'
aclocal: overwriting 'm4/ltversion.m4' with '/usr/share/aclocal/ltversion.m4'
aclocal: overwriting 'm4/nls.m4' with '/usr/share/aclocal/nls.m4'
aclocal: overwriting 'm4/po.m4' with '/usr/share/aclocal/po.m4'
aclocal: overwriting 'm4/progtest.m4' with '/usr/share/aclocal/progtest.m4'
aclocal: installing 'm4/intlmacosx.m4' from '/usr/share/aclocal/intlmacosx.m4'
aclocal: error: too many loops
aclocal: Please contact <bug-automake@gnu.org>.
 at /usr/share/automake-1.17/Automake/Channels.pm line 661.
	Automake::Channels::msg("automake", "", "too many loops") called at /usr/share/automake-1.17/Automake/ChannelDefs.pm line 233
	Automake::ChannelDefs::prog_error("too many loops") called at /usr/bin/aclocal line 1229
autoreconf: error: aclocal failed with exit status: 255
```

--- a/community/alpine/APKBUILD
+++ b/community/alpine/APKBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Kaarle Ritvanen <kunkku@alpinelinux.org>
 pkgname=alpine
 pkgver=2.26
-pkgrel=3
+pkgrel=4
 pkgdesc="Text-based email client, friendly for novices but powerful"
 url="https://repo.or.cz/alpine.git"
 arch="all"
 license="Apache-2.0"
-makedepends="openldap-dev heimdal-dev ncurses-dev openssl-dev>3 autoconf automake libtool gettext-dev"
+makedepends="openldap-dev heimdal-dev ncurses-dev openssl-dev>3 autoconf automake libtool gettext-tiny-dev"
 subpackages="$pkgname-dbg $pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://repo.or.cz/alpine.git/snapshot/refs/tags/v$pkgver.tar.gz
 	gcc14.patch
