community/irctk: rename fossil() split function
to prevent mixup with cmd:fossil; this function splits a fossil
bridge, so it wouldn't be unexpected if fossil is also installed

--- a/community/irctk/APKBUILD
+++ b/community/irctk/APKBUILD
@@ -11,7 +11,7 @@ depends="tk"
 makedepends="curl-dev m4"
 subpackages="
 	$pkgname-doc
-	$pkgname-transport-fossil
+	$pkgname-transport-fossil:_transport_fossil
 	"
 source="https://lab.abiscuola.com/irctk/tarball/$pkgver/irctk-$pkgver.tar.gz"
 options="!check" # no test suite
@@ -36,7 +36,7 @@ package() {
 		-type f -name Makefile -delete
 }
 
-fossil() {
+_transport_fossil() {
 	pkgdesc="Fossil chat to IRC bridge"
 	depends=
 
