community/py3-jaraco.context: fix installer .whl filename
Fix packaging error due to changed .whl filename with setuptools >= 75.3.1.

```
FileNotFoundError: [Errno 2] No such file or directory: '.dist/jaraco.context-6.0.1-py3-none-any.whl'
```

--- a/community/py3-jaraco.context/APKBUILD
+++ b/community/py3-jaraco.context/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=py3-jaraco.context
 pkgver=6.0.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Context managers by jaraco"
 url="https://github.com/jaraco/jaraco.context"
 arch="noarch"
@@ -39,7 +39,7 @@ check() {
 }
 
 package() {
-	python3 -m installer -d "$pkgdir" .dist/jaraco.context-$pkgver-py3-none-any.whl
+	python3 -m installer -d "$pkgdir" .dist/jaraco_context-$pkgver-py3-none-any.whl
 }
 
 sha512sums="
