--- a/community/ats2/APKBUILD
+++ b/community/ats2/APKBUILD
@@ -22,7 +22,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var
-	make -j1
+	make -j1 CC="$CC" CCOMP="$CC"
 }
 
 package() {
