community/py3-ufolib2: upgrade to 0.17.1, fix installer .whl filename
https://github.com/fonttools/ufoLib2/releases/tag/v0.17.1
https://github.com/fonttools/ufoLib2/releases/tag/v0.17.0
https://github.com/fonttools/ufoLib2/releases/tag/v0.16.1

Also fix packaging error due to changed .whl filename with setuptools
>= 75.3.1.

```
FileNotFoundError: [Errno 2] No such file or directory: '.dist/ufoLib2-0.16.0-*.whl'
```

--- a/community/py3-ufolib2/APKBUILD
+++ b/community/py3-ufolib2/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=py3-ufolib2
-pkgver=0.16.0
-pkgrel=2
+pkgver=0.17.1
+pkgrel=0
 pkgdesc="UFO font library"
 url="https://github.com/fonttools/ufoLib2"
 arch="noarch"
@@ -44,9 +44,9 @@ check() {
 
 package() {
 	python3 -m installer -d "$pkgdir" \
-		.dist/ufoLib2-$pkgver-*.whl
+		.dist/ufolib2-$pkgver-*.whl
 }
 
 sha512sums="
-b4189e15f57afaf4356bd23fbd118e896c4ec4f79baea21812e2e9911598e3ce1405d2c64bd299c405769f0827dffa3ac81208312c0e335550706a4cbd91f076  py3-ufolib2-0.16.0.tar.gz
+8db37f5c17d98b430e26dc1a250c79ebb3d12cd05175af2ade3b4691c37919b9cc9e0741624403c7907fffd84b3a3c45a400226d65c2af54e9911ed37659b74c  py3-ufolib2-0.17.1.tar.gz
 "
