--- a/main/openrc/APKBUILD
+++ b/main/openrc/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=openrc
 pkgver=0.62
 _ver=${pkgver/_git*/}
-pkgrel=2
+pkgrel=3
 pkgdesc="OpenRC manages the services, startup and shutdown of a host"
 url="https://github.com/OpenRC/openrc"
 arch="all"
@@ -36,6 +36,9 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/OpenRC/openrc/archive/$pkgve
 	0009-Based-on-the-vrf-patch-it-adds-support-to-run-servic.patch
 	0010-librc-dirfd-is-initalized-with-zero-not-with-1.patch
 	0011-Revert-init.d-user-quit-fast-if-it-s-failing-rapidly.patch
+	0012-init.d-meson.build-install-agetty-as-a-relative-syml.patch
+	0013-shared-misc-handle-EOF-when-waiting-for-notify.patch
+	0014-src-librc-loop-readdir-properly-in-rm_dir.patch
 
 	supervise-daemon-defaults.patch
 	sysctl-readme.patch
@@ -241,6 +244,9 @@ ef824828a476926095867c2bab07703f68656887f1f426ca6848714f896b606457ce79286f41c42a
 d7b8b1facd7fb9a6a8350912644cce3956947bcaa8bcb645f9c26a2bb0d062970efaa14bd66a7987f0748daff7b5a8e701b45b3fcca7c7c7e393ac262728f1a6  0009-Based-on-the-vrf-patch-it-adds-support-to-run-servic.patch
 00f6db1e3e3799cbeaa516217a1358cad106a748bf873e7a0e536f8a0f9cae745408b3973f029f6fa47b55c99b8f2ab5333c6431b76f81a2f4ece1df7b89a5a9  0010-librc-dirfd-is-initalized-with-zero-not-with-1.patch
 1884a4cd391e376c21b6b3c90798e3d7c83a8cf01ed285ee3cf73a4e07d3f9b0c99ab194966afb12382b9468687a11f32ef4500e373f169e35f34e74cc2053db  0011-Revert-init.d-user-quit-fast-if-it-s-failing-rapidly.patch
+ddbdffdfbb1415dbc65dbfea0d337658606791aaf520512fafc34a7c7a9914a54a75395003b057f292e7b84a3797bf826fbba6412cf5e47c48462c0790411ec3  0012-init.d-meson.build-install-agetty-as-a-relative-syml.patch
+8292a4951185580bab9c335319921de6ffd6a3b31781f2c4811538bb72c670bd1639b55d98ffbb526da8005493941980001fa79b9d5aef2607db4df350319dfc  0013-shared-misc-handle-EOF-when-waiting-for-notify.patch
+bde0066bfdaa874e313980e43b7a3724d39b9a1ad6c75f47e7ddb30de014fdcbe10524d19eac6d2bf3d4444c1c35529fe4e03839a78482a3ff9710b2d2dc9aa9  0014-src-librc-loop-readdir-properly-in-rm_dir.patch
 86a2fb1564b8537f5dd7e06587a572ebefd110bf8bea049bc2254d4008ed3fed2296b4e9fde793ddbed7a66f70335b6c228f0b10fc0a6e7d106d3ad226fc0ba4  supervise-daemon-defaults.patch
 903ff555275a67ff08da91badb55d9fa6c6a2901e8ef09ca8366bd74d69757491c8336347f04551268ecf053c8ae974f50decd869926894dd94e382008e3e925  sysctl-readme.patch
 12bb6354e808fbf47bbab963de55ee7901738b4a912659982c57ef2777fff9a670e867fcb8ec316a76b151032c92dc89a950d7d1d835ef53f753a8f3b41d2cec  openrc.logrotate
