testing/devpod: statically compile the binary
Devpod copies itself into the containers and since most of those would
run glibc, the binary needs to be statically compiled to function in
there.

--- a/testing/devpod/APKBUILD
+++ b/testing/devpod/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=devpod
 pkgver=0.6.15
-pkgrel=1
+pkgrel=2
 pkgdesc="Codespaces but open-source, client-only, and unopinionated"
 url="https://github.com/loft-sh/devpod"
 # ppc64le blocked by undefined references
@@ -22,7 +22,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/loft-sh/devpod/archive/refs/
 	"
 
 build() {
-	go build -trimpath -v -o devpod-cli -ldflags="-X github.com/loft-sh/devpod/pkg/version.version=v$pkgver"
+	go build -trimpath -v -o devpod-cli \
+		-ldflags="-X github.com/loft-sh/devpod/pkg/version.version=v$pkgver -extldflags=-static"
 }
 
 check() {
