--- a/community/nix/APKBUILD
+++ b/community/nix/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 maintainer="Hoang Nguyen <folliekazetani@protonmail.com>"
 pkgname=nix
-pkgver=2.26.3
+pkgver=2.28.2
 pkgrel=0
 pkgdesc="The purely functional package manager"
 url="https://nixos.org/nix/"
@@ -14,6 +14,7 @@ makedepends="
 	$depends_dev
 	bash
 	bison
+	blake3-dev
 	brotli-dev
 	busybox-static
 	bzip2-dev
@@ -157,9 +158,9 @@ perl() {
 }
 
 sha512sums="
-844f852c94c9b8d253e774f0628a565aa35e898cc2d6f2961d44d6d23fd444dedaa5f52dc856180af126a0b3b0f6d0dd269464aa11096080d8a1da1f664aad0b  nix-2.26.3.tar.gz
+f7b00d85ea57087b0c9b42af2231505c00c55945d9975b784789c8060a0095f9f032cdfc5c0bd5e83fa30e08806bdb128fad812430551fd8789a37e0a6ea2ca6  nix-2.28.2.tar.gz
 f6a8d67003a6f0cd54dc4dc26051e9f3d18d9c1c1d66c99324e3db017891a6fdd88d7be53de05ab21fa8f7635164a093069416a89cf322ea6f6888df066ea60b  README.alpine
 ad02313f026fe3286c7c2271f26bf074ba2966c12777d7109275555f1a616bf0f99c8f5e45a57161f383091867f1dfd4d84cfae7a6d8a075312608456975dc81  nix-remote.sh
 9e4568db987fbae5097f7bb086e8ad51742c2d229703104fb7e6f240ffb0ca72e57dc305fb238bcee4ec8002d780007af60f241b1f32b6aa413dd579d9c59e75  nix-daemon.initd
-4bf84827e2757a23680d4f3ad118d92d15010801343083dd362d291672a357d566a94f518afc36265628baaea2a0b1e4d87d33e53ba71e3c3ec7545fac66613e  no-linkcheck.patch
+205d109cba691e1382112b69f5504cdcad083c7d4de8b0b2bfc98d51a5648f29cd507f860c6b627727f413db7ffdb806e92a6217fb68420eee3ef1326af778ed  no-linkcheck.patch
 "
