community/b3sum: add blake3-libs and blake3-dev subpackages

--- a/community/b3sum/APKBUILD
+++ b/community/b3sum/APKBUILD
@@ -3,13 +3,21 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=b3sum
 pkgver=1.8.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Command line implementation of the BLAKE3 hash function"
 url="https://github.com/BLAKE3-team/BLAKE3"
 arch="all"
 license="CC0-1.0 OR Apache-2.0"
-makedepends="cargo cargo-auditable"
-source="$pkgname-$pkgver.tar.gz::https://crates.io/api/v1/crates/b3sum/$pkgver/download"
+makedepends="
+	cargo
+	cargo-auditable
+	cmake
+	samurai
+	onetbb-dev
+	"
+subpackages="blake3-libs blake3-dev"
+source="$pkgname-$pkgver-1.tar.gz::https://github.com/BLAKE3-team/BLAKE3/archive/refs/tags/$pkgver.tar.gz"
+builddir="$srcdir/BLAKE3-$pkgver/b3sum"
 
 case "$CARCH" in
 armhf)
@@ -31,6 +39,14 @@ prepare() {
 build() {
 	cargo auditable build --release --frozen \
 		${_features:+--features $_features}
+
+	cmake -S ../c/ -B build -G Ninja \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_SHARED_LIBS=ON \
+		-DCMAKE_BUILD_TYPE=None \
+		-DBLAKE3_USE_TBB=ON
+	cmake --build build
 }
 
 check() {
@@ -39,8 +55,10 @@ check() {
 
 package() {
 	install -Dm755 target/release/b3sum -t "$pkgdir"/usr/bin/
+
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
-7fd6705b4f5cdd98382dd73049e21671fdd1d48e2d1eb4464065ce3928c8f23d87214ae68305228d2f29b8c45df7420a86c382874dc0f20af344666cdb98a731  b3sum-1.8.2.tar.gz
+5832d15373a0ec224e3c8dc86e1540e9246efbdf8db88fc2cce8924552f632532d9b74eeb15e1d31e3f13676656b5230d009151b4c57eb9d84224a9e385ba839  b3sum-1.8.2-1.tar.gz
 "
