main/s390-tools: add patch for chown

--- a/main/s390-tools/APKBUILD
+++ b/main/s390-tools/APKBUILD
@@ -37,6 +37,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/ibm-s390-tools/s390-tools/ar
 	argz.h
 	Makefile.argz
 	mk-s390-cdboot.c
+	chown_syntax_fix.patch
 	"
 
 build() {
@@ -87,4 +88,5 @@ ab1bc0273fdd529fe4dcf20d3d8760d30702d670bbef1f173951d12fe2a62344c8b81209296c103c
 50bd5c0f555963dadbfaa72df5bf0801a48743d6d0feddb6ebfa4ffa410196216c1860d3a577361e035169fea4217aef3f04d69394c59db65b60c5ea29eba8cb  argz.h
 5e19ccfce59a2a79863db676b0ea4280cb9016cda1a30dc233526f52425c305410dd148453b75c2613acac37e364305ee25f8e545d57c5059cca19a13bac2a5e  Makefile.argz
 41b581d2b9cc061964aa2d5ff022de89399b7e377afef2d2fd46414a63a338fd4897e8bb1e06ca4f5fe33c9addedc8934f07980899bcd5291823de093e1b8af9  mk-s390-cdboot.c
+e99a4244a2e604ae6a5a57a77b114349ebe38db3fdcce7a5ee9167be81f9ac0113cfacf4592a83a2c761a590ef1f1fbe31fd9d332a7fbb8d2cf4a2259984d945  chown_syntax_fix.patch
 "
