testing/vscodium: upgrade to 1.99.32704

--- a/testing/vscodium/APKBUILD
+++ b/testing/vscodium/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Díaz Urbaneja Diego <sodomon2@gmail.com>
 # Maintainer: Díaz Urbaneja Diego <sodomon2@gmail.com>
 pkgname=vscodium
-pkgver=1.98.2.25078
-
+pkgver=1.99.32704
 pkgrel=1
 pkgdesc="VSCode without Microsoft branding/telemetry"
 url="https://vscodium.com/"
@@ -39,6 +38,10 @@ prepare() {
 	default_prepare
 
 	sed -i 's|--max-old-space-size=8192|--max-old-space-size=4096|g' build.sh
+	
+	# Disable CLI (tunnel app)
+	# error with target x86_64-unknown-linux-musl
+	sed -i 's|. ../build_cli.sh||g' build.sh
 }
 
 build() {
@@ -58,7 +61,6 @@ build() {
 	export DISABLE_UPDATE="yes"
 
 	# yarn/npm cache located in $srcdir
-#	npm config set cache "$srcdir/yarn-cache"
 	yarn config set cache-folder "$srcdir/yarn-cache"
 
 	HOME=$srcdir ./get_repo.sh
@@ -84,8 +86,7 @@ package() {
 }
 
 sha512sums="
-aa0807e0915ad760113b8f309a0afdb47075825d201e5c1871277f275397abf432259505e477c9b9a64051638d8f35d7e19f5acd71e8ac6d7bbb0e157273e369  VSCodium-1.98.2.25078-src.tar.gz
-
+43397dfa5362457f723beef4a9cf26a2a33cebe18440c590356e51170b7679a7be35a389c4306bff0b1730d90e282c7775a886740fa11691c45fe01a387637e3  VSCodium-1.99.32704-src.tar.gz
 0f807784b2552e894cb51d1fda36c9f03094e3ff22b0b05b8e3fdc51f710da64e96bf3e882142a3d67b8ce9279f3907ffa1813c89727cc6452a39706bfd81ac6  codium
 f4d634fcd9b076f58f74d92ee06fb699ad337b2022bb72bd9e0f163c6a9f03bfcbfaa9c79fd3f1497d688253721d85dd57d23ef27b9c724a26d6660ee0fbd2d0  vscodium.desktop
 "
