community/typescript: upgrade to 5.8.3

--- a/community/typescript/APKBUILD
+++ b/community/typescript/APKBUILD
@@ -1,7 +1,6 @@
-# Contributor: Díaz Urbaneja Diego <sodomon2@gmail.com>
-# Maintainer: Díaz Urbaneja Diego <sodomon2@gmail.com>
+maintainer="Díaz Urbaneja Diego <sodomon2@gmail.com>"
 pkgname=typescript
-pkgver=5.7.2
+pkgver=5.8.3
 pkgrel=0
 pkgdesc="TypeScript is a superset of JavaScript that compiles to clean JavaScript output"
 url="https://www.typescriptlang.org/"
@@ -24,5 +23,5 @@ package() {
 }
 
 sha512sums="
-8b9b7ae911f10ef54de341df0ddd4fb044e118d9e5302313de3314ba887dff44daa967af3689ed69cba75b2374d8b03dfdf21b11695c1d97204ca6fd42868b7e  typescript-5.7.2.tgz
+a757625ba4ea2fd2f4ee7371bd130cee130cc387395cea3fd626cbe1a0081a6480b7db254c4d57830e4a5aea1fdae4cebc283d058ed9462f86685fbbb1f80f79  typescript-5.8.3.tgz
 "
