--- a/community/py3-rich/APKBUILD
+++ b/community/py3-rich/APKBUILD
@@ -14,7 +14,8 @@ depends="
 makedepends="py3-gpep517 py3-installer py3-poetry-core py3-wheel"
 checkdepends="py3-pytest py3-setuptools"
 subpackages="$pkgname-pyc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/Textualize/rich/archive/refs/tags/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/Textualize/rich/archive/refs/tags/v$pkgver.tar.gz
+	fix-pygments.patch"
 builddir="$srcdir/rich-$pkgver"
 
 build() {
@@ -36,4 +37,5 @@ package() {
 
 sha512sums="
 36d9f0442759784453a75c9a80cd3dde113db5544d62da1eb85bc0572c16b6247da9b5254246fa571007ce0e70a234aea2ab1ed5dc20c1ec23084070733d39a1  py3-rich-13.9.4.tar.gz
+f19d34287cc7fb92a8430c27fc81d688dc4cf484c6bd4640a3d9e93d2e4f7e201e82b602557b0b8981315348e0d42d03470c481b7d271fe276ab5f3488a280b3  fix-pygments.patch
 "
