--- a/community/fwupd/APKBUILD
+++ b/community/fwupd/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=fwupd
 pkgver=2.0.8
-pkgrel=0
+pkgrel=1
 pkgdesc="Firmware update daemon"
 url="https://fwupd.org/"
 # armhf, ppc64le and s390x blocked by gnu-efi/fwupd-efi
@@ -71,6 +71,7 @@ source="https://github.com/fwupd/fwupd/releases/download/$pkgver/fwupd-$pkgver.t
 	$pkgname.initd
 	$pkgname.confd
 	elogind.patch
+	fix-pixel-fastboot.patch
 	"
 
 # libsmbios is a library for DELL devices which are x86/x86_64-only
@@ -150,4 +151,5 @@ c3598434ea6c70dda49eb681cd71d856ba755654ae4ea6263e4a2da0ecbcedeaaf3edcc46583a358
 2c34891ec273aa1a4d105602cd5e99add5a17d6e240fa93a015d5bb2e11e54937b04781de2a854c472be376524b50fc5bb48edf7b875afb54e3ca07dcda117b0  fwupd.initd
 0bf773a2c52b0306e99e5192d259f38cce8a25487e95a41b6e0200a1ed629235971795a1f9ba12a633cd902671d888610695658f2cc2c750e2afca70f87ee589  fwupd.confd
 3c8f4d9fb4808a4561933c61c74e9da6572fced66b69c3fe184a0a7b430acd045fac85c57c91d20da1d01c33a9be4aea20c115821bdd5207174f7b872ab15347  elogind.patch
+7e5f7f8cafe510c2f16efe9056ef26b32dc8386da31275e49f7548fab30cdcac7829c76e64d7a48ba54dc68453ebc6a81c65051d4cfd24ed0fdc2bd0436810be  fix-pixel-fastboot.patch
 "
