--- a/community/py3-zope-event/APKBUILD
+++ b/community/py3-zope-event/APKBUILD
@@ -9,6 +9,7 @@ arch="noarch"
 license="ZPL-2.1"
 depends="py3-setuptools"
 # checkdepends="py3-zope-testrunner" # Is in upper repo
+options="!check"
 subpackages="$pkgname-pyc"
 source="zope.event-$pkgver.tar.gz::https://github.com/zopefoundation/zope.event/archive/$pkgver.tar.gz"
 builddir="$srcdir"/zope.event-$pkgver
