community/anki: take over maintainership

--- a/community/anki/APKBUILD
+++ b/community/anki/APKBUILD
@@ -1,6 +1,6 @@
 # Contributor: Alexander Bocken <alexander@bocken.org>
-# Contributor: Callum Andrew <contact@candrew.net>
-# Maintainer: Frank Oltmanns <alpine@oltmanns.dev>
+# Contributor: Frank Oltmanns <alpine@oltmanns.dev>
+maintainer="Callum Andrew <contact@candrew.net>"
 pkgname=anki
 pkgver=25.02.4
 pkgrel=0
