testing/llvm-next: upgrade to 21.0.0_pre20250427

--- a/testing/llvm-next/APKBUILD
+++ b/testing/llvm-next/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=llvm-next
-pkgver=21.0.0_pre20250421
-_gitrev=9e26c797ae9699fba8bd62af99ab3ad6f9b16462
+pkgver=21.0.0_pre20250427
+_gitrev=c21531895a5d5e6ffc349d6e229d71dd1463860a
 pkgrel=0
 pkgdesc="Future LLVM Preview"
 url="https://llvm.org/"
@@ -264,7 +264,7 @@ build() {
 		-DLLVM_INSTALL_UTILS=ON \
 		-DLLVM_LINK_LLVM_DYLIB=ON \
 		-DLLVM_USE_PERF=ON \
-		-DLLVM_TARGETS_TO_BUILD="host;X86;AMDGPU;BPF;WebAssembly;LoongArch;RISCV;SPIRV" \
+		-DLLVM_TARGETS_TO_BUILD="host;X86;AMDGPU;BPF;WebAssembly;LoongArch;RISCV;SPIRV;AArch64;PowerPC" \
 		-DLLVM_VERSION_SUFFIX="" \
 		\
 		-DLLVM_ENABLE_ASSERTIONS=OFF \
@@ -429,7 +429,7 @@ check() {
 	done
 
 	# https://github.com/llvm/llvm-project/issues/59429
-	if [ "$CARCH" = "loongarch64" ] || ! $LLVM_SELF_HOST; then
+	if ! $LLVM_SELF_HOST; then
 		LIT_XFAIL="ExecutionEngine/MCJIT/eh-lg-pic.ll;\
 ExecutionEngine/MCJIT/eh.ll;\
 ExecutionEngine/MCJIT/multi-module-eh-a.ll;\
@@ -660,8 +660,14 @@ EOF
 
 	# we have the scudo allocator available, so link lld to it to
 	# significantly improve performance, especially in LTO contexts
-	patchelf --add-needed libscudo.so \
-		"$pkgdir"/usr/lib/llvm$_majorver/bin/lld
+	case "$CARCH" in
+	# riscv64: Scudo ERROR: internal map failure (error desc=Out of memory)
+	riscv64) ;;
+	*)
+		patchelf --add-needed libscudo.so \
+			"$pkgdir"/usr/lib/llvm$_majorver/bin/lld
+		;;
+	esac
 
 	# CMake is only able to install this relative to CMAKE_INSTALL_PREFIX.
 	mv -v "$pkgdir"/$_prefix/$pysitedir/* "$pkgdir"/usr/$pysitedir/
@@ -889,7 +895,7 @@ openmpdev() {
 		usr/share/gdb/python/ompd \
 		$_prefix/lib/libomptarget*
 
-	amove $_prefix/lib/*/libomp*.a || :
+	amove $_prefix/lib/*/libomp*.* || :
 }
 
 polly() {
@@ -1250,8 +1256,8 @@ pyc() {
 }
 
 sha512sums="
-9520e7338282e9c78b5e25d9dae5401d216ec9841c987ac2def0a9238dc069b8d21173acd84eac8a8c3989ccf7f745b6878e203672916bf049b2871b2637259e  llvm-project-9e26c797ae9699fba8bd62af99ab3ad6f9b16462.tar.gz
-bd104899dc5b994655f15b426fd4d5820def9c268dd8f88ab82f98ae1f256b4d17344cc81c8e3e01c908e5ce347ac9d5494c277de5c29508c8e85230138cae35  0001-Disable-dynamic-lib-tests-for-musl-s-dlclose-is-noop.patch
+25e09c0345edbc6fcb03e2aca054643e7b44eddfd905d984938f135f8fd72b1088e9aceb119a09e5af6dd3953ac570428e2a99c2ce593bccf8689db5d8b75184  llvm-project-c21531895a5d5e6ffc349d6e229d71dd1463860a.tar.gz
+456868e8c5fae5ce409bb2c26683cda9c88626bed96309c96e5d689df2bc968c4897830a8bda7ac4e6d2ff5c3904281f61a2127e65921a63dcca5825fd307752  0001-Disable-dynamic-lib-tests-for-musl-s-dlclose-is-noop.patch
 c51dcd90def5dfcc70e14d50143c53d215a2a13d34051c26a6cad50c8b95be1e97c21295c7b1b3b9671da6add350d1cd26c5e049fd537226e089ab5d16c83907  0002-Fix-memory-mf_exec-on-aarch64.patch
 7384dacff265d9fd3a36433e3289455023c78fec442b3e847ead2c5fc0acbc3f3f81db742d1a298c6d752709a856a2efff8676cb7056983180af61a7aa3b08ec  0003-LLVM-install-prefix.patch
 2ca6276064ee25551524bc08648f728227b4e7ceacac0f3b42fac9db5e4de6ad3bd73bbecf475683b748ab4d2dbc2a82f5b5c60bef906a97179dddc73703da4e  0004-LLVM-stack-size.patch
@@ -1263,7 +1269,7 @@ a40e41640f80d9f391205b056a812ffb63e89eeccf568c4b0cd207bc644551c0b58b4d1fbfcafd56
 99e5f2274cd76679192fa59dfa4373e40970780aeab2ab132e539aa6567ed9ea7bdba0c1a2ab97d8beeacf512a573748441859224801be6595ef55211b89ed0b  0010-Install-lldb-tblgen-into-llvm-next-dev-subpackage.patch
 52614e2dffaf501a8275d3c715357073bce8b2247d4119c476170eeab56e1bc1326717fe2f3a7cd64e96f0f13c45d2e28905f2563d128b9bd1292d7b7eb0fafb  0011-Use-full-version-for-liblldb-symlink-target.patch
 cfaec3e531dfdb36ec5a5d617e07d7f83658e72b499c47cfdefa0cffae9c77f1755e882395fe7ef5a22a9f563e13f6e0491adb5971487be25c4c4d42f2bb5d9e  0012-Add-version-to-libomp-soname.patch
-95563724314ee8b78fd3db790eee3b4ff8436430952876ed627ab7197e3dd17c698ac5757449d1935607f486852005e117d72208b840b5f104545c962b475853  0013-Standalone-libatomic.patch
+ac47a741f5cbcc1c5e111a03db27ff38ccc024eae76a4c726e449cdfc0af1f375b53812e6759964f8d966a039701bf9590addd1c8047bf52628435a2ef96102f  0013-Standalone-libatomic.patch
 c4c9775cfaf5b9c84a5448354dd6d302db21e9a847c3cca87abc1aabc95732b5f660c44514e9a1b4f95c7145cb6cceb564babd44480797bffa5a501dccdaee3e  0014-Fix-msan-with-musl.patch
 347b210c8313143d40c2e312a4c44ae8e1ea1715f7fd150cfa6a8831d3b6ac7b9ec233402ab8ea9eff4baff806b66c910bdc129bc73d273a150451af9a084388  0015-PPC-sanitizer-fixes.patch
 c1dd3309533314881201d35d42b85437262fdbe88675cd7e23ef3830b1b026b310c5a5d86aa4ada0b2e1db3c0c6853e1b1202292117c99b1d15f640ec55a52e8  0016-Basic-lsan-fixes-on-various-archs.patch
