community/py3-pygithub: fix installer .whl filename
Fix packaging error due to changed .whl filename with setuptools >= 75.3.1.

```
FileNotFoundError: [Errno 2] No such file or directory: '.dist/PyGithub-2.5.0-py3-none-any.whl'
```

Ref: https://gitlab.alpinelinux.org/alpine/aports/-/issues/17110

--- a/community/py3-pygithub/APKBUILD
+++ b/community/py3-pygithub/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=py3-pygithub
 _pkgname=PyGithub
 pkgver=2.5.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Typed interactions with the GitHub API v3"
 url="https://github.com/PyGithub/PyGithub"
 arch="noarch"
@@ -44,7 +44,7 @@ check() {
 
 package() {
 	python3 -m installer -d "$pkgdir" \
-		.dist/PyGithub-$pkgver-py3-none-any.whl
+		.dist/pygithub-$pkgver-py3-none-any.whl
 }
 
 sha512sums="
