--- a/community/afl++/APKBUILD
+++ b/community/afl++/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Marian <marian.buschsieweke@posteo.net>
 # Maintainer: Marian <marian.buschsieweke@posteo.net>
 pkgname=afl++
-pkgver=4.31c
+pkgver=4.32c
 pkgrel=0
 pkgdesc="Fuzzer relying on genetic algorithms instead of brute force"
 url="https://aflplus.plus/"
@@ -10,7 +10,7 @@ url="https://aflplus.plus/"
 arch="all !x86 !s390x"
 license="Apache-2.0"
 # afl-cmin requires stat
-_llvmver=19
+_llvmver=20
 # llvm LTO test fails on riscv64
 # https://github.com/AFLplusplus/AFLplusplus/issues/2064
 case "$CARCH" in
@@ -18,7 +18,7 @@ case "$CARCH" in
 esac
 depends="
 	clang$_llvmver
-	compiler-rt
+	clang$_llvmver-rtlib
 	lld$_llvmver
 	llvm$_llvmver
 	python3
@@ -48,7 +48,6 @@ provides="
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/AFLplusplus/AFLplusplus/archive/refs/tags/v$pkgver.tar.gz
 
-	fix-compilation-classify_counts_mem.patch
 	extend-64bit-detection.patch
 	"
 builddir="$srcdir/AFLplusplus-$pkgver"
@@ -94,7 +93,6 @@ tools() {
 }
 
 sha512sums="
-dff17d0c1246d84950375f3946454de9f6bbe85ff7d1b42b896af121ffe375e8998756b6c64690bb021186e363e62c49e24ef54526469e0671a3dd083d695fe7  afl++-4.31c.tar.gz
-2fae33ae1e67a6aacaa010126d12e6da45408b321fbfccfc101332a7baa330458aaa7b06cf31343bfabba4a7bb658d1d0c78322b1770aa9a58c680da7309be78  fix-compilation-classify_counts_mem.patch
-1b6012eae563d4993d64fb4419cd6b784e8a856769ac4f3eca95bf396f6abac956b0ea09cd767360209cdfbe87a30d3dcdb223a7c469e0d77954e88cf6ae2b2f  extend-64bit-detection.patch
+9688f476129b45e842918b2e185c5fc82eb94aecd7ac27bfeecc74f5525aaf3754dbb4c442fec3902a93aad079178e1523a544f0808a4b6d21a11dc9508be0a0  afl++-4.32c.tar.gz
+671c404eb44f9890be66afb3dd3cca4e9423d83e4c98e9df8ff76f75209efc7c5f3427937bdeb71cbd93b12d7d5e877b494e9a231df0a274f1e80df72ded484d  extend-64bit-detection.patch
 "
