--- a/community/qt6-qtvirtualkeyboard/APKBUILD
+++ b/community/qt6-qtvirtualkeyboard/APKBUILD
@@ -6,7 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Virtual keyboard framework"
 url="https://qt.io/"
-arch="all"
+arch="all !armhf" # armhf: missing qt6-declarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	hunspell-dev
