--- a/community/ipfixprobe/APKBUILD
+++ b/community/ipfixprobe/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ipfixprobe
-pkgver=4.11.1
-pkgrel=1
+pkgver=4.16.0
+pkgrel=0
 pkgdesc="High-performance net flow exporter"
 url="https://github.com/CESNET/ipfixprobe"
 arch="all"
@@ -11,10 +11,12 @@ makedepends="
 	autoconf
 	automake
 	bsd-compat-headers
+	cesnet-telemetry-dev
 	libpcap-dev
 	libtool
 	linux-headers
 	openssl-dev
+	lz4-dev
 	"
 checkdepends="bash"
 install="$pkgname.pre-install"
@@ -97,7 +99,7 @@ dpdk() {
 }
 
 sha512sums="
-eadfed502d548ef436e004759f4ecd6dc91e0378a0e7e8cbbc8354ce2577632ce6addbf0353febd46f32c4e467f7eea5dd6044049de0633c21dde6517e97a867  ipfixprobe-4.11.1.tar.gz
+a08f04753d73b45d5465a5cf2b06e19390f38be9a71b9d687fcf1f5eed6a1ace52bceeb3bd4d0374190a9a2a77d56865c088aaa0f37fed905f639ab5995634a2  ipfixprobe-4.16.0.tar.gz
 f249b80012909231f01469016ff1f78cb214d0b0e9590950a0143437028ec58e9ba7ac2e10020261bf99d3d0c260a901d453828be7388612257f286137fe84a8  ipfixprobe.initd
 7d86866beb9797910ebc4970cf8d2fca3c72071084fa637edf8e882024467f8337e02b8d7d0a69372c46968bc3589721cd81815277162e2f1510779d6c52beec  ipfixprobe.confd
 "
