community/py3-pygithub: upgrade to 2.6.1

--- a/community/py3-pygithub/APKBUILD
+++ b/community/py3-pygithub/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=py3-pygithub
 _pkgname=PyGithub
-pkgver=2.5.0
-pkgrel=1
+pkgver=2.6.1
+pkgrel=0
 pkgdesc="Typed interactions with the GitHub API v3"
 url="https://github.com/PyGithub/PyGithub"
 arch="noarch"
@@ -16,11 +16,11 @@ depends="
 	py3-requests
 	py3-typing-extensions
 	py3-urllib3
-	python3
 	"
 checkdepends="
 	py3-httpretty
 	py3-pytest
+	py3-responses
 	"
 makedepends="
 	py3-gpep517
@@ -48,5 +48,5 @@ package() {
 }
 
 sha512sums="
-4fbb6b27e21ba97ee59a0bafee40768d2beb61d9d405e2edd04bb859df7e299c072917dd7fde85202a539591d806e1a4697576cab78b465c559eef50fa223183  PyGithub-2.5.0.tar.gz
+8ff34150b74e9f8b2212c6f93020621cb1aedbf7ecc8f6832f2083faf9ebb9949a626e1c5e50bb3876ed5a3b1976f13d9cf42f364dd4c9479dd5057c802d258c  PyGithub-2.6.1.tar.gz
 "
