community/wluma: build with vendored dependencies

--- a/community/wluma/APKBUILD
+++ b/community/wluma/APKBUILD
@@ -22,6 +22,7 @@ makedepends="
 install="$pkgname.post-install"
 subpackages="$pkgname-wlroots::noarch"
 source="https://github.com/maximbaz/wluma/archive/$pkgver/wluma-$pkgver.tar.gz
+	https://github.com/maximbaz/wluma/releases/download/$pkgver/wluma-$pkgver-vendored.tar.gz
 	link-vulkan-at-runtime.patch
 	default-config.patch
 	"
@@ -33,8 +34,6 @@ prepare() {
 
 	# Create a default empty config that will be embedded in the executable.
 	echo '[als.none]' > config.toml
-
-	cargo fetch --target="$CTARGET" --locked
 }
 
 build() {
@@ -61,6 +60,7 @@ wlroots() {
 
 sha512sums="
 dee0da0ee764d22153da128271c084d19b8d2277c0df00c877079b454fd59f05bce48ca75f448d3eb95b71b3161906f49478278b71490b0eb0f30d39cd62e828  wluma-4.9.0.tar.gz
+8d61c2322051eb1112b2aa22c68419f81fb01e9ca2035c6f43918ab6f45ed5df4816428abbf5e875be41c66c8285fa7f986bf4a66d9d78ccd9dc5bc2d192ab88  wluma-4.9.0-vendored.tar.gz
 622d13484e1f03099c6277ee4f53513a692b8f3e8f70374e8b8f168114700c43b0a590044fac65c26f8e365cd25ab0f58d38cc1efec237bf36ab2c05b08c7bb9  link-vulkan-at-runtime.patch
 8830c4317750360abfae3f6d2ef47e2b642f1b5c5524858bc007e7f65a08162564b5134fe5b6e5a9f011e723646b11696447ea8838308914db5ba9b3d3b254a6  default-config.patch
 "
