--- a/community/mimalloc2/APKBUILD
+++ b/community/mimalloc2/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=mimalloc2
 _projname=mimalloc
-pkgver=2.1.7
+pkgver=2.2.3
 _pkgver=${pkgver%_*}
 pkgrel=0
 _pkgdesc="A compact general purpose allocator with excellent performance"
@@ -19,6 +19,7 @@ subpackages="
 	$pkgname-debug
 	"
 source="https://github.com/microsoft/mimalloc/archive/v$_pkgver/$_projname-$_pkgver.tar.gz
+	remove-include-linux-prctl-h.patch
 	cmake-add-insecure-suffix.patch
 	"
 builddir="$srcdir/$_projname-$_pkgver"
@@ -102,6 +103,7 @@ debug() {
 }
 
 sha512sums="
-4e30976758015c76a146acc1bfc8501e2e5c61b81db77d253de0d58a8edef987669243f232210667b32ef8da3a33286642acb56ba526fd24c4ba925b44403730  mimalloc-2.1.7.tar.gz
-99a7777e310f4a585e482ad9dc44fce62e88b65f4f8f51545c9e6b1fd8a17583614cc853e65dade9dd083936de90c3a6f23aa52eb84697020f2a44868e6d4c93  cmake-add-insecure-suffix.patch
+55262050f63868e3029cd929a74d312dc0f34b606534b1d0b3735eecc8eed68aae97523a50228b4ac4044e1e03192f2909440e3a27607e2d364607ac0bda828f  mimalloc-2.2.3.tar.gz
+7015d5123280639f18b3a07b007de43bf3cb60009d144dcb6f9d027ba14b35a18ece5f8c21b3c63723e2f05b86c3ea5b64e521d61b54b1e5c885934904cbd63a  remove-include-linux-prctl-h.patch
+8b0542f0b5992cdc1423345ba980ead00ba89784b6608716bbc67587560a5782325af871d4084abf2b8f38abe3ac008ae733dbde0f5d84344689739cb49a1aff  cmake-add-insecure-suffix.patch
 "
