--- a/community/deno/APKBUILD
+++ b/community/deno/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=deno
-pkgver=2.0.6
-pkgrel=2
+pkgver=2.3.1
+pkgrel=0
 pkgdesc="A modern runtime for JavaScript and TypeScript"
 url="https://deno.land/"
 # armhf,armv7,x86: deno currently doesn't support 32-bit arches
@@ -11,23 +11,26 @@ arch="aarch64 x86_64"
 license="MIT"
 depends="ca-certificates"
 # This follows compiler-rt, not clang or llvm package.
-_llvmver=19
+_llvmver=20
 makedepends="
 	cargo
 	cargo-auditable
 	clang-dev
+	cmake
 	compiler-rt
 	curl
 	glib-dev
 	gn
 	icu-dev
 	jq
+	lcms2-dev
 	libffi-dev
 	lld
 	llvm-dev
 	protoc
 	python3
 	samurai
+	simdutf-dev
 	sqlite-dev
 	zlib-dev
 	zlib-ng-dev
@@ -46,7 +49,9 @@ subpackages="
 	$pkgname-fish-completion
 	$pkgname-zsh-completion
 	"
-_rusty_v8_ver=0.106.0
+# This must match "v8" version in Cargo.lock.
+_rusty_v8_ver=135.1.0
+# This must match "stacker" version in Cargo.lock.
 _stacker_ver=0.1.15
 # Note: We use the crate instead of GitHub tarball due to lacks of submodules
 # in the tarball.
@@ -58,11 +63,11 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/denoland/deno/releases/downl
 	stacker-disable-guess_os_stack_limit.patch
 	v8-build.patch
 	v8-compiler.patch
-	v8-musl-monotonic-pthread-cont_timedwait.patch
 	v8-no-execinfo.patch
+	v8-link-libatomic.patch
 	v8-use-system-zlib.patch
 	v8-use-system-icu.patch
-	v8-fix-bindgen-macro.patch
+	v8-unbundle-simdutf.patch
 	disable-core-defaults.patch
 	use-system-libs.patch
 	ignore-tests-broken-on-ci.patch
@@ -70,12 +75,11 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/denoland/deno/releases/downl
 	tests-disable-upgrade.patch
 	tests-fix-sh-path.patch
 	tests-ignore-flaky.patch
+	tests-ignore-broken.patch
 	unbundle-ca-certs.patch
 	cargo.lock.patch
 	"
-	#tests-fix-npx-output.patch
 builddir="$srcdir/deno"
-options="!check" # tests failing are causing builders to not upload packages
 
 # TODO:
 # - build variant without dev tools
@@ -131,6 +135,7 @@ export GN_ARGS="
 	system_zlib=true
 	use_custom_libcxx=false
 	use_sysroot=false
+	use_system_libffi=true
 	"
 
 export EXTRA_GN_ARGS="use_custom_libcxx=false"
@@ -162,7 +167,7 @@ prepare() {
 
 	cd vendor/v8
 
-	local use_system="icu"
+	local use_system="icu simdutf"
 	python3 build/linux/unbundle/replace_gn_files.py --system-libraries $use_system
 	local lib; for lib in $use_system; do
 		sed -i '/"\/\/base"/d' third_party/$lib/BUILD.gn
@@ -201,9 +206,6 @@ prepare() {
 	local rusty_v8_ver="$(_crate_ver 'v8')"
 	[ "$rusty_v8_ver" = "$_rusty_v8_ver" ] || die "Update _rusty_v8_ver to $rusty_v8_ver"
 
-	# FIXME: This test is perhaps broken.
-	rm -rf tests/specs/cert/cafile_install
-
 	# We disable the upgrade feature.
 	rm -rf tests/specs/upgrade
 }
@@ -237,15 +239,7 @@ check() {
 
 	msg "Running tests"
 
-	PATH="$PWD/target/release:$PATH" cargo test $cargo_opts --workspace --exclude test_ffi
-
-	case "$CARCH" in
-		# basic test fails on aarch64.
-		# https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/48979#note_323013
-		# TODO: Figure out why...
-		aarch64) cargo test $cargo_opts --package test_ffi || true;;
-		*) cargo test $cargo_opts --package test_ffi;;
-	esac
+	PATH="$PWD/target/release:$PATH" cargo test $cargo_opts --workspace
 }
 
 package() {
@@ -271,26 +265,27 @@ _crate_ver() {
 }
 
 sha512sums="
-de4949ef3bba82ee1b176cddfa818307d8cd847855b87d596b38b9459cab5f51aed7d87bc8b41ba9cf762eca4d71983b2ca9d2906023495c1d8934986bdedec3  deno-2.0.6.tar.gz
-ebc1d90e706003f0aea174011241bcf0303355f579855ed7ebadb71b4d8e1711cd70e207b19fdcc657fa0be57525d6398b6bb16e02c18f9e752ad23fce54e936  deno-rusty_v8-0.106.0.tar.gz
+2ce1acb408b60878bdf471553fc9d7f7debcd1a8ffc2ec4072730cf46a61b306f40f580f1cb2a92afa52ed54657af18bffc9dbba1c84026c3d11d47e1ee4a010  deno-2.3.1.tar.gz
+0b141ba4e41f84583bd29944dd5c0f076cbd96a1c0f6c1ba1299115743d3cb88997f2a71a7fa24ecea58ed7d43d688f75b3820e068fee9a0fec09bc3f05cdf07  deno-rusty_v8-135.1.0.tar.gz
 88412e029262a0dffe295a648ba87ec50f782afceb19fbe1eda4239c54fbd56432106fcea5d58c93bfbb5b91317dc6642fc7a8e72136df0ef600c77d99e0970f  deno-stacker-0.1.15.tar.gz
 ecea1432982e55c462f54aae135e1b7d0c964d9faa2f245cf114910e81ba6b3a06379c11ecd56f82cf3528f478cd394ad759cb246b3cdf70f6a40be744e17ecd  deno-generate_shim_headers.py
 08d09c979191d422d71a6db971bdf4472b322ef829b238519bc35db22f9b4639cca40342c7786777684a4ffa4af2c64febf9d9224b2d7d2d33f63671acfa6d5b  stacker-detect-stack-overflow.patch
-f2352e197c1da8011b9c11f19150e85dd48cc9356fdc837ccc9ae74a47ee5cde736c838509646527be529b21badd2d25e002a22cc9cb265d2ceedecd9f808b09  stacker-disable-guess_os_stack_limit.patch
-c22ea9a32b6c5850a75681ebbb3772fa9539f36b186a1b01c6c83b9f9cdc9c9f3559be915d4f75c7eba12c450980ade14278934764da64ee473c42f15250076d  v8-build.patch
-bb1732b087917c363a8b77f8d57fafcc7f2ef0a320ea6d1099c3108bc8c15243a6738960b73f43403ba47777c195db6f7239563103b42a36d6350be8896f2e88  v8-compiler.patch
-858c7fa2714d290180e4e6b0000ee371f0540c7353762e6b5953f5e673a1800f6feab65e1dc525dab04caf64c4d689ac35700631337fabb4152cb5c375300cdf  v8-musl-monotonic-pthread-cont_timedwait.patch
-a911c92e470823f3b6b578d1dc5784222769228e22cca3dc5bf9895e39835d578b28f48e763b5f92964e76c19f0b10a7a67c0575494d8f74dc1094f508a8efb1  v8-no-execinfo.patch
-1be3c56e3aba4354abaff0a612380ab749dac98599a3dd50640b5d55306a27de64cd827bae7b3bd5fa059049a895bb6e44422aa7007f640482de894e13609d86  v8-use-system-zlib.patch
-8016f73e53188f53ef98a72dd97b43cd8bae113d1a5a3e69d4c43fb93a6dca6916e2194d9679655f68ef323b449db701b9d032f8814d4d871ce1b58bf0f66bd3  v8-use-system-icu.patch
-2be4dd5cad17332c0163ae008ad645ff0c45bdb6626ed005ced959989dbffe3cda5bdf8e05b382464a93ba80944e811f4f982cf29c08ee8ae2da190154182788  v8-fix-bindgen-macro.patch
-c98575145fbbf7b2b7f82700e14ed28b6de69ae5f34223ea2dce99bc61c19cec800c8fba1667f4a982dc2ea4aa6ae84a6adc453c93232db4e50dded97b84202e  disable-core-defaults.patch
-c34d8ad2e874343864922fbf2290bff3307e5ab2bbeb8af20e414c94617b68aeb4244a7d935b1a70e5b1f6c9fb175ee451556518810bb538f62b0e8f80cfbf05  use-system-libs.patch
-f63dfe61ff1854f7242390cdeb09aa69c4b2f4ca131b75cccc726db37e3f95bb1eaad3d7431d9d19f14213ba112680534e0c32c82bee861d12c43e4e91763521  ignore-tests-broken-on-ci.patch
+e56b1bfefcd47c21d1ed4aad531990ffdfbb79b560740ca2dbddeb0103028ae2b47709473642078acd67e0947fe91e423909452a2936ae057d8607b9249ab943  stacker-disable-guess_os_stack_limit.patch
+1832c38010b128b2d9c75ed4304213b3f619da6a56ddccfd45f3500136080dfa6e1644e92a46f468f0f5497e3f4133716c5c2cfd6673b578a370128ec02bda31  v8-build.patch
+780822e79b8ff35d6560ac773574a4ab0e0a72153a6f4feeb984b2d240170aa847f73630981d1ee8590fe5d9e1f6b2c0f5683d96eb75b1b29feb9a5a36a7e244  v8-compiler.patch
+c7a406d80a8f63ce2a65de043380f00d7370ceec1bae45d819f741eeb550b8e340224334916f10dd85cc46f6204c7bab0f7d5e0045234e7d790ee63472328454  v8-no-execinfo.patch
+ec0ae19e243380ae06985ee78fefb930391663d6aad4a8ebb1a397cfc8723ced606900e1b156fd87aa9b692214b516894c8899537e355414375798996c406680  v8-link-libatomic.patch
+2dd342b4c5c6866b85690c670c9741682c86d89e84ebbd7123eef978f83c7ff07187decaee0d350ce892947fb4753e76640db026231f556d54760aa73e6c650f  v8-use-system-zlib.patch
+afc26a21443a0225b84207626d77c793a1cb6cc3b463e439de99ee470691c5aabbd60f69400a3f918f7808686b086aae5d2bcbb6d190ae9dedc1685d51c0b9b3  v8-use-system-icu.patch
+22ba5e1e2348ba43d0a61f6cc65c7d259a12dbdf163bad2b039d1e47f0bc50b6811dbb85e6742481cffaf27bc1d1249a67264dc31e90b758cff054238fb8cc02  v8-unbundle-simdutf.patch
+19df82f973dbe2b56eeb29709c6391c987d14bfc2e742ec67fdc09514517dfa134a703d16392f960f71e2567f37587cbd44aeeb52417228ae43fdf34551c241f  disable-core-defaults.patch
+a4c7d63b79224e0fcad5a956d31a3edc5ca38e08086b8660e80f63e6159bd63c90134c4a950f5053f83ebf7078c8de37145ddd2bbac3bcb98208b939c0d5c0a6  use-system-libs.patch
+9e255dc6696917cf5bceaf081aff43e0ce0a56b64910a60bec60f1bf82a7abe72fc88c7ff4629bfa4a2dd1ef6e5428cb1da9d92a2acded7b1a05a06a4793fe6c  ignore-tests-broken-on-ci.patch
 8674c6c53ef206253f88d6e9c68ef12ccca0759c5b364ffb3cc625e80b03b57cceff3a295e2b9eaba975fe9aca5b69bc17dc42b311a5a9ded461528bee19ad0f  tests-musl-compat.patch
 46f8c23998abb0a38e6982646bf548bce6d4c86f7e5d7ecfec0d4552a50c0e20b017e195bcc1115efadb0bc874dd394a0553537ebab62c686d4e00bfd02ce240  tests-disable-upgrade.patch
 32b0218879ac55dff3997e7a4e08257af51472afb4f8726507a6bedcd98845988739e095089db83119a6e398dd2b5889255139d257ad6063237898816a5253a6  tests-fix-sh-path.patch
 1c73e5b4b4bbba8f0cdd8c8be5c285f5a2c97311f25847e78c0140ade0da5a3ccdc914772bf667421666d3809453a048d45ffa9881a9785b416d01a5c57afbc0  tests-ignore-flaky.patch
-59ba2177221f8ac531ed488b117dc629f66fa9c954acf378f488aa113733f671c5e3835142f92157fe521972b6d0c907712fae1efa2bddba2f271074ddb9480a  unbundle-ca-certs.patch
-7d176b3eb7981f25b7827343f802cb902e1aede59f98f28f330e60f9eb823e63a13b3713495ad3d604b817cd4f0952ed880cb5185f17f6ae64b44231b0c273af  cargo.lock.patch
+160221f2984af42401ea8b3da6dae019d7e894577e4f8b24eb51e172b64d5b34997e4bea1890d9689ad6e81524f7b9a9af7eb2f2ebdb7c20f68f5cd0b41b00bc  tests-ignore-broken.patch
+1d724c4a960a88744a0b4290cb9bb56f6d8bd39a24dfd156b90d9e84c212897141a7d077975f448ce5239109575bd01f1b50c6a1cd764cf82cdfbad9b2a14051  unbundle-ca-certs.patch
+89a052c672fc584ac00e1038ec705b8ea7fe0859c9df0ee75ecac788b2ed7393f84416e924eb1ae021e069e59d29dceb8f9344d2d480398456ea7d0ed162cb77  cargo.lock.patch
 "
