--- a/community/py3-setuptools-git/APKBUILD
+++ b/community/py3-setuptools-git/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=py3-setuptools-git
 _pkgname=setuptools-git
 pkgver=1.2
-pkgrel=8
+pkgrel=9
 pkgdesc="Setuptools plugin for Git"
 url="https://github.com/msabramo/setuptools-git"
 arch="noarch"
@@ -11,23 +11,26 @@ license="BSD-3-Clause"
 replaces="py-setuptools-git" # for backwards compatibility
 provides="py-setuptools-git=$pkgver-r$pkgrel" # for backwards compatibility
 depends="python3 git"
-makedepends="python3-dev py3-setuptools"
+makedepends="python3-dev py3-setuptools py3-gpep517 py3-wheel"
 subpackages="$pkgname-pyc"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1 >&2
 }
 
 check() {
-	export EMAIL="Test User <user@example.com>"
-	python3 setup.py test
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer --no-compile .dist/*.whl
+	.testenv/bin/python3 -m unittest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" .dist/*.whl
 }
 
 sha512sums="c070911618b6b92c862fb0bd40f1daeaf79e2ba10389fa1e69e4c50cfdd39c8e57a612082cbc7d932f8cea12a769e13451e35e1c8fe34f170d4817fd0d44f156  setuptools-git-1.2.tar.gz"
