community/py3-setuptools-git: fix email for tests

--- a/community/py3-setuptools-git/APKBUILD
+++ b/community/py3-setuptools-git/APKBUILD
@@ -24,6 +24,7 @@ build() {
 }
 
 check() {
+	export EMAIL="Test User <user@example.com>"
 	python3 -m venv --clear --without-pip --system-site-packages .testenv
 	.testenv/bin/python3 -m installer --no-compile .dist/*.whl
 	.testenv/bin/python3 -m unittest
