testing/firefox-developer-edition: fix build

--- a/testing/firefox-developer-edition/APKBUILD
+++ b/testing/firefox-developer-edition/APKBUILD
@@ -55,6 +55,7 @@ makedepends="
 	zip
 	"
 source="https://ftp.mozilla.org/pub/firefox/releases/$_pkgver/source/firefox-$_pkgver.source.tar.xz
+	bmo-1953266-sqlite-vec-uint.patch
 	fix-fortify-system-wrappers.patch
 	fix-rust-target.patch
 	fix-webrtc-glibcisms.patch
