community/deno: remove denort - it's broken

--- a/community/deno/APKBUILD
+++ b/community/deno/APKBUILD
@@ -44,7 +44,6 @@ checkdepends="
 	npm
 	"
 subpackages="
-	denort
 	$pkgname-bash-completion
 	$pkgname-fish-completion
 	$pkgname-zsh-completion
@@ -217,7 +216,8 @@ build() {
 	# Increase stack size for 'cargo build' to avoid stack overflow.
 	export RUST_MIN_STACK="4194304"
 
-	cargo auditable build $_cargo_opts --release -vv
+	# NOTE: denort is broken (Could not find standalone binary section).
+	cargo auditable build $_cargo_opts --workspace --exclude denort --release -vv
 
 	mkdir -p comp
 	local shell; for shell in bash fish zsh; do
@@ -242,17 +242,10 @@ check() {
 
 package() {
 	install -D -m755 target/release/deno -t "$pkgdir"/usr/bin/
-	install -D -m755 target/release/denort -t "$pkgdir"/usr/bin/
 
 	install -D -m644 comp/$pkgname.bash "$pkgdir"/usr/share/bash-completion/completions/$pkgname
 	install -D -m644 comp/$pkgname.fish "$pkgdir"/usr/share/fish/vendor_completions.d/$pkgname.fish
 	install -D -m644 comp/$pkgname.zsh "$pkgdir"/usr/share/zsh/site-functions/_$pkgname
-}
-
-denort() {
-	pkgdesc="Deno runtime-only binary for deno compile"
-
-	amove usr/bin/denort
 }
 
 # Resolves version(s) of crate $1 in the depenendecy graph that satisfies
