--- a/community/elixir/APKBUILD
+++ b/community/elixir/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Marlus Saraiva <marlus.saraiva@gmail.com>
 # Maintainer: Michal Jirků <box@wejn.org>
 pkgname=elixir
-pkgver=1.18.2
+pkgver=1.18.3
 pkgrel=0
 pkgdesc="Elixir is a dynamic, functional language designed for building scalable and maintainable applications"
 url="https://elixir-lang.org/"
@@ -16,12 +16,12 @@ subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/elixir-lang/elixir/archive/v$pkgver.tar.gz"
 
 build() {
-	LANG="en_US.UTF-8" make
+	LANG="C.UTF-8" make
 }
 
 check() {
 	set +e
-	make test
+	ELIXIR_ASSERT_TIMEOUT=10000 LANG="C.UTF-8" make test
 	ret=$?
 	set -e
 
@@ -37,5 +37,5 @@ package() {
 }
 
 sha512sums="
-5f17085bf65f0913c5beea79eb8c0724f5d360e926cb77c177930f573cebd8511ede0311e85a7725035753a7c3d320d5243402408b3a5e50c9b8380845d819b7  elixir-1.18.2.tar.gz
+bf56c69ab7768c6d08b42bf42b062db8d7a063ec6971e5f21575f5502f7d954fe4ab77dcb83cbb4d72dcc53ec91a396e3738adabcc52e83cb375296989054df5  elixir-1.18.3.tar.gz
 "
