--- a/community/qt6-qtmultimedia/APKBUILD
+++ b/community/qt6-qtmultimedia/APKBUILD
@@ -6,7 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Classes for audio, video, radio and camera functionality"
 url="https://qt.io/"
-arch="all"
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	$pkgname-ffmpeg=$pkgver-r$pkgrel
