--- a/community/qt6-qtquicktimeline/APKBUILD
+++ b/community/qt6-qtquicktimeline/APKBUILD
@@ -6,7 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Qt module for keyframe-based timeline construction"
 url="https://qt.io/"
-arch="all"
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	qt6-qtbase-dev
