--- a/main/multipath-tools/APKBUILD
+++ b/main/multipath-tools/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=multipath-tools
 pkgver=0.11.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Device Mapper Multipathing Driver"
 url="http://christophe.varoqui.free.fr/"
 arch="all"
@@ -19,7 +19,7 @@ makedepends="
 	util-linux-dev
 	"
 checkdepends="cmocka-dev"
-subpackages="$pkgname-doc $pkgname-openrc"
+subpackages="$pkgname-doc $pkgname-openrc kpartx"
 source="$pkgname-$pkgver.tar.gz::https://github.com/opensvc/multipath-tools/archive/refs/tags/$pkgver.tar.gz
 	multipath-tools.conf
 	multipath.initd
@@ -59,6 +59,14 @@ package() {
 		"$pkgdir"/etc/init.d/multipath
 	install -D -m644 README.md \
 		"$pkgdir"/usr/share/doc/$pkgname/README.md
+}
+
+kpartx() {
+	pkgdesc="Create device maps from partition tables (from multipath-tools)"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel"
+
+	amove usr/sbin/kpartx
 }
 
 sha512sums="
