main/multipath-tools: remove redundant dependency
abuild traces dependency so:libdevmapper.so.1.02 automatically,
specifying device-mapper is superfluous.

--- a/main/multipath-tools/APKBUILD
+++ b/main/multipath-tools/APKBUILD
@@ -6,7 +6,7 @@ pkgdesc="Device Mapper Multipathing Driver"
 url="http://christophe.varoqui.free.fr/"
 arch="all"
 license="LGPL-2.0-only"
-depends="eudev device-mapper"
+depends="eudev"
 makedepends="
 	eudev-dev
 	json-c-dev
