community/forgejo: patch permission check for git push

--- a/community/forgejo/APKBUILD
+++ b/community/forgejo/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=forgejo
 pkgver=9.0.3
-pkgrel=5
+pkgrel=6
 pkgdesc="Self-hosted Git service written in Go"
 url="https://forgejo.org"
 arch="all"
@@ -21,6 +21,7 @@ source="$pkgname-$pkgver.tar.gz::https://codeberg.org/forgejo/forgejo/archive/v$
 	$pkgname.ini
 	sec-forgejo-actions-web-routes.patch
 	sec-permission-check-for-project-issue.patch
+	sec-git-push-permission-check.patch
 	"
 builddir="$srcdir/forgejo"
 options="!check net chmod-clean" # broken with GIT_CEILING
@@ -110,4 +111,5 @@ eb93a9f6c8f204de5c813f58727015f53f9feaab546589e016c60743131559f04fc1518f487b6d2a
 b537b41b6b3a945274a6028800f39787b48c318425a37cf5d40ace0d1b305444fd07f17b4acafcd31a629bedd7d008b0bb3e30f82ffeb3d7e7e947bdbe0ff4f3  forgejo.ini
 068548d1a96238ae36b2381db66f3ac021cca75a2ce2440b9ec47e8696badcb2b688736c80240a64d21d47f94994d63a20e3385a0100a67f4e87a7359c808a87  sec-forgejo-actions-web-routes.patch
 7545bb4dd9949a87a7c887b2f6721db3a24ad7f36303b81f40d7148711b662ac69018aaa244793a14fdfefbdf8886a48d53ebf171ab8074e6767efbcf9098975  sec-permission-check-for-project-issue.patch
+a66f5a65b5dda4337a07f357fac6071cad6334adcf6b46be627e15a6a1cf668478ab7936921e833ddc46ac16da7a2000ba08aab5bb29587d95fa5115aa94aa14  sec-git-push-permission-check.patch
 "
