community/hickory-dns: move from testing and use default libclang

--- a/community/hickory-dns/APKBUILD
+++ b/community/hickory-dns/APKBUILD
@@ -6,7 +6,7 @@ pkgdesc="A safe and secure DNS server with DNSSEC support"
 url="https://hickory-dns.org/"
 arch="all"
 license="Apache-2.0 OR MIT"
-makedepends="cargo cargo-auditable clang20-dev cmake"
+makedepends="cargo cargo-auditable clang-dev cmake"
 checkdepends="bind"
 subpackages="
 	$pkgname-openrc
