--- a/community/usb-moded/APKBUILD
+++ b/community/usb-moded/APKBUILD
@@ -25,7 +25,7 @@ makedepends="$depends_dev
 	dbus-dev
 	libtool
 	"
-subpackages="$pkgname-dev $pkgname-openrc"
+subpackages="$pkgname-dbg $pkgname-dev $pkgname-openrc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/sailfishos/usb-moded/archive/refs/tags/mer/${_pkgver/\//-}.tar.gz
 	https://github.com/sailfishos-mirror/dbus-glib/archive/$_commit_dbus_glib/dbus-glib-$_commit_dbus_glib.tar.gz
 	usb-moded.confd
