--- a/main/py3-wheel/APKBUILD
+++ b/main/py3-wheel/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Antoine Fontaine <antoine.fontaine@epfl.ch>
 # Maintainer: Peter Shkenev <santurysim@gmail.com>
 pkgname=py3-wheel
-pkgver=0.43.0
+pkgver=0.45.1
 pkgrel=0
 pkgdesc="built-package format for Python"
 url="https://github.com/pypa/wheel"
@@ -34,7 +34,7 @@ build() {
 
 check() {
 	python3 -m venv --clear --without-pip --system-site-packages test-env
-	test-env/bin/python3 setup.py install
+	test-env/bin/python3 -m installer .dist/*.whl
 	test-env/bin/python3 -m pytest
 }
 
@@ -44,6 +44,6 @@ package() {
 }
 
 sha512sums="
-b6213c05263026884c07bdc4d529252f0be013c3fc6d0558008b7130ba90d4ef11e57f155f62f5e2528ddcd78d188530b2b7c78acc15b8168f64935fe6e6393b  wheel-0.43.0.tar.gz
-c937b20ab67c68bf343833a73cc235359584a523dd491d5bd3fcb59ff46ad0e49ccd6a8f8eab9d8e139061505ca7089c4f9e4df6df075920c721ba961d62a784  use-system-packaging.patch
+df45f00e9eaeae2f27f813f31591590c961da2f6bff15bba6fb2a14d529c221f39b29894b8da408fe49cd4b760840a0e05c4baef377ccfacd9983c0bba83d6d8  wheel-0.45.1.tar.gz
+99376c78831a8b1a10c4b59cf07304043710c0f233149ff95dcb9cb2392c38b27d0fc7b7c1d4f4b6501f3a3a837e6091a93c0d10a54e016a7ae27d53ea9d47f9  use-system-packaging.patch
 "
