testing/dissent: take over maintainership

--- a/testing/dissent/APKBUILD
+++ b/testing/dissent/APKBUILD
@@ -1,6 +1,5 @@
 # Contributor: lauren n. liberda <lauren@selfisekai.rocks>
-# Contributor: Callum Andrew <contact@candrew.net>
-# Maintainer: lauren n. liberda <lauren@selfisekai.rocks>
+maintainer="Callum Andrew <contact@candrew.net>"
 pkgname=dissent
 pkgver=0.0.33
 pkgrel=0
