--- a/main/py3-wheel/APKBUILD
+++ b/main/py3-wheel/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Antoine Fontaine <antoine.fontaine@epfl.ch>
 # Maintainer: Peter Shkenev <santurysim@gmail.com>
 pkgname=py3-wheel
-pkgver=0.45.1
+pkgver=0.46.1
 pkgrel=0
 pkgdesc="built-package format for Python"
 url="https://github.com/pypa/wheel"
@@ -14,9 +14,7 @@ makedepends="
 	"
 checkdepends="py3-pytest py3-setuptools python3-dev"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/w/wheel/wheel-$pkgver.tar.gz
-	use-system-packaging.patch
-	"
+source="https://files.pythonhosted.org/packages/source/w/wheel/wheel-$pkgver.tar.gz"
 builddir="$srcdir"/wheel-$pkgver
 options="!check" # circular with pytest
 
@@ -44,6 +42,5 @@ package() {
 }
 
 sha512sums="
-df45f00e9eaeae2f27f813f31591590c961da2f6bff15bba6fb2a14d529c221f39b29894b8da408fe49cd4b760840a0e05c4baef377ccfacd9983c0bba83d6d8  wheel-0.45.1.tar.gz
-99376c78831a8b1a10c4b59cf07304043710c0f233149ff95dcb9cb2392c38b27d0fc7b7c1d4f4b6501f3a3a837e6091a93c0d10a54e016a7ae27d53ea9d47f9  use-system-packaging.patch
+69219fb100d47da42999e0d0e4a023ac43489eb7f1755cb08f6d72a26bda1d435b3a9738340379b1a7f0054330711c7ca9865736cb0463a3f49004c25b61ebfe  wheel-0.46.1.tar.gz
 "
