community/netpbm: add failing test, sort failing tests

--- a/community/netpbm/APKBUILD
+++ b/community/netpbm/APKBUILD
@@ -40,13 +40,14 @@ check() {
 	# disable failing tests
 	# stdin-pnm2: "pnmtops: bad magic number 0x3539 - not a PAM, PPM, PGM, or PBM file"
 	# ps-{flate-}roundtrip: similar pnmtops error, may occur with missing ghostscript
-	sed -i -e '/^pbmtext-iso88591.test/d' \
+	sed -i -e '/^pamdice.test/d' \
+		-e '/^pbmtext-iso88591.test/d' \
+		-e '/^pnmindex.test/d' \
 		-e '/^ppmpat-random.test/d' \
 		-e '/^ppmtomitsu.test/d' \
-		-e '/^pnmindex.test/d' \
-		-e '/^stdin-pnm2.test/d' \
-		-e '/^ps-roundtrip.test/d' \
 		-e '/^ps-flate-roundtrip.test/d' \
+		-e '/^ps-roundtrip.test/d' \
+		-e '/^stdin-pnm2.test/d' \
 		"$builddir"/test/Test-Order
 
 	# Some tests sporadically fail, try to repeat 3 times before failing.
