--- a/main/py3-setuptools/APKBUILD
+++ b/main/py3-setuptools/APKBUILD
@@ -1,7 +1,8 @@
 # Contributor: Andrew Manison <amanison@anselsystems.com>
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Peter Shkenev <santurysim@gmail.com>
+# Contributor: Peter Shkenev <santurysim@gmail.com>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-setuptools
 pkgver=80.3.1
 pkgrel=0
