community/zigbee2mqtt: upgrade to 2.3.0

--- a/community/zigbee2mqtt/APKBUILD
+++ b/community/zigbee2mqtt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=zigbee2mqtt
-pkgver=1.42.0
+pkgver=2.3.0
 pkgrel=0
 pkgdesc="Zigbee to MQTT bridge"
 url="https://www.zigbee2mqtt.io/"
@@ -11,12 +11,13 @@ url="https://www.zigbee2mqtt.io/"
 # x86: textrel
 arch="all !armhf !ppc64le !riscv64 !x86"
 # zigbee2mqtt is GPL-3.0, other licenses are for its dependencies.
-license="GPL-3.0-only AND MIT AND ISC AND BSD-3-Clause AND Python-2.0"
+license="GPL-3.0-only AND MIT AND ISC AND BSD-3-Clause AND BlueOak-1.0.0 AND Python-2.0"
 depends="nodejs"
 makedepends="
 	linux-headers
-	nodejs
+	nodejs-dev
 	npm
+	pnpm
 	python3
 	"
 pkgusers="zigbee2mqtt"
@@ -29,7 +30,7 @@ subpackages="
 source="https://github.com/Koenkk/zigbee2mqtt/archive/$pkgver/$pkgname-$pkgver.tar.gz
 	dont-build-on-start.patch
 	ungit.patch
-	pan_id-secret.patch
+	rollup-wasm-node.patch
 
 	configuration.yaml
 	$pkgname.initd
@@ -37,28 +38,41 @@ source="https://github.com/Koenkk/zigbee2mqtt/archive/$pkgver/$pkgname-$pkgver.t
 	"
 options="net"
 
-build() {
-	npm ci --foreground-scripts --no-fund
+# Don't let pnpm pollute $HOME.
+export XDG_CACHE_HOME="${tmpdir:-$srcdir}/.cache"
+export XDG_STATE_HOME="${tmpdir:-$srcdir}/.state"
+export PNPM_HOME="${tmpdir:-$srcdir}/.pnpm"
+# Prevent node-gyp from downloading nodejs headers.
+export npm_config_nodedir=/usr
 
+prepare() {
+	default_prepare
+
+	pnpm install --frozen-lockfile
+}
+
+build() {
 	# Rebuild serialport native bindings.
-	cd node_modules/@serialport/bindings-cpp
+	cd node_modules/.pnpm/@serialport+bindings-cpp@*/node_modules/@serialport/bindings-cpp
 	rm -rf prebuilds
-	npm exec --yes prebuildify@5 -- --napi --force --strip --verbose
+
+	npm exec --yes prebuildify@6 -- --napi --strip --verbose
+
 	rm -rf build src
 	cd - >/dev/null
 
-	npm run build
+	pnpm run build
 }
 
 check() {
-	npm run test
+	pnpm run test
 }
 
 package() {
 	local destdir="$pkgdir/usr/lib/$pkgname"
 
 	mkdir -p "$destdir"
-	cp -r dist node_modules cli.js index.js package.json "$destdir"/
+	cp -r dist node_modules cli.js index.js package.json pnpm-lock.yaml "$destdir"/
 
 	cd "$pkgdir"
 
@@ -78,13 +92,14 @@ package() {
 	cd "$destdir"
 
 	# Remove dev dependencies.
-	npm prune --omit dev
+	pnpm prune --prod
 
 	cd node_modules
 
 	# Remove unnecessary files and garbage.
 	find . -empty -type d -delete
 	find . \( -name '.git*' \
+			-o -name '.vscode' \
 			-o -name 'doc' \
 			-o -name 'fixture' \
 			-o -name 'fixtures' \
@@ -103,10 +118,9 @@ package() {
 			-o -name 'CMakeLists.txt' \) \
 		-type f -delete
 	rm -rf moment/dist moment/min moment/src
-	rm -rf nan/.tap
 	rm -rf jszip/dist
 	rm -rf mqtt/dist
-	rm -rf pako/dist
+	rm -rf .pnpm/node_modules/dist
 
 	cd unix-dgram
 	rm -rf build/node_gyp_bins
@@ -124,11 +138,11 @@ dbg() {
 }
 
 sha512sums="
-863c462043aa8cbffae75ecb07233bb8fb7147b4c870c369dfe58c6b1d5c95fe55679338b7f594d9dc80ae9f1c7b46bfaad3632683be3a35504fb734aae82120  zigbee2mqtt-1.42.0.tar.gz
-e92b5d6c18e6379882087a1862319a54246b674bb075f56b87f17d00162ef944d7f5838a146d9805a413e0af0982696cae1524038be6b8cef0faa1d30dccc0ee  dont-build-on-start.patch
-b6c7646e808d103f02eb96fe97fd4a74fdc4a665e9f7e47c73f54c76e5509651d0165396fe25ffe30472c51240560a13def07f7ee898439437726e8394a1ec5a  ungit.patch
-82f84556ba6bc99d1394be6bdffb778fd3bc09cad353b10c61535a715dea4ab9c08c0a3882c7c7ecf8e4573d057dfa160181210f47323f49451ecae4360d95d3  pan_id-secret.patch
-9e963f3d8dd25149f4532d5dbe31217e22a1e468344272ddcf4f64eaf68c069f85a3979cbe388503b7701a06fdb451d02c610726ad0540cc630496e351e0bc0c  configuration.yaml
+d1eee5e3fdbfb64ba2aec56a9fcd9d7293a21922a2b74f69b7f841d19bdd0e2cb6c9e4b40945c0f753ac6aac1bc72d27354cdce8854eacebc1564309a18d4574  zigbee2mqtt-2.3.0.tar.gz
+8dae6f02d13c60aae1823994e55d739e4a2341a48707ab2100704ced483326221b943ef8a43aa29929864a1c5ca131cf510029c9ad817474c5df34049124256f  dont-build-on-start.patch
+98e47c84451d73c94321dc8e881107b396a7cdc1bcc6927bbdfb16eaa067db5c675515551aa550e114542c7ae3c956b21000fecefb98db742adfd48d9796f8f4  ungit.patch
+a4871c906de9770cacd2bf652c50983464ff16ec9231b5d5e9bba0c98c91ff78bfb9bfc48ab5416556483c542a3c961d01f9beaf76a54489b0b8d6eacd934bda  rollup-wasm-node.patch
+77c86a1a6c1a0d06664cfce4360148fd7f83ab4d55194359441e65002555d1d9f50ff7e7ac3e5ffeebd7a945700b71fe62512b8f0769397de84f7d403f4da4b9  configuration.yaml
 74ffc0d00be0ed6d4a7a837e3f3e6b6f03f50fdd82bb0ea0694016549554364809dfe69befa4ff1031536ab2483194bb6d7bda7c8859233fa5b029e76432b689  zigbee2mqtt.initd
 cb84a6cbdfbbd6e7163289b4a2b7e4737c3549f679f1becc8c2327bd7a27be8f10666467551f8aa7d7dca3b17daf48d54aa451d85c76b02ccf12579c3528ea59  zigbee2mqtt.confd
 "
