--- a/community/zigbee2mqtt/configuration.yaml
+++ b/community/zigbee2mqtt/configuration.yaml
@@ -1,4 +1,8 @@
 # See https://www.zigbee2mqtt.io/guide/configuration/.
+# NOTE: Zigbee2MQTT writes to this file.
+
+# Indicates the configuration version (used by configuration migrations).
+version: 4
 
 # Allow new devices to join.
 # TODO: It's important to disable this after you've peered your devices!
@@ -14,21 +18,36 @@ mqtt:
   # user: my_user
   # password: '!secret.yaml mqtt_password'
 
-# Serial settings
-serial:
-  # Location of Zigbee adapter.
-  port: /dev/ttyACM0
-  # Adapter type, not needed unless you are experiencing problems (zstack,
-  # deconz, or ezsp).
-  #adapter: null
+# Serial settings, only required when Zigbee2MQTT fails to start with:
+#   USB adapter discovery error (No valid USB adapter found).
+# serial:
+#     # Location of the adapter
+#     # USB adapters - use format "port: /dev/serial/by-id/XXX"
+#     # Ethernet adapters - use format "port: tcp://192.168.1.12:6638"
+#     port: /dev/ttyACM0
+#     # Adapter type, allowed values: `zstack`, `ember`, `deconz`, `zigate` or `zboss`
+#     adapter: zstack
 
-# Uncomment to enable frontend.
-# frontend:
-#   port: 8080
-#   host: 127.0.0.1
+# Built-in web-based frontend
+frontend:
+  enabled: true
+  # Port to listen on.
+  port: 8080
+  # Host to listen on, it can also be a unix socket path.
+  host: 127.0.0.1
+  # Optionally enable authentication (add 'auth_token: PASSWORD' to secret.yaml).
+  # auth_token: '!secret.yaml auth_token'
+  # Optional URL on which the frontend can be reached, currently only used for
+  # the Home Assistant device configuration page.
+  # url: https://zigbee2mqtt.example.org
 
-# Home Assistant integration (MQTT discovery).
-homeassistant: false
+# Availability feature
+availability:
+  enabled: false
+
+# Home Assistant integration (MQTT discovery)
+homeassistant:
+  enabled: false
 
 advanced:
   log_level: info
@@ -51,3 +70,6 @@ advanced:
 # The following file paths are relative to the datadir (/var/lib/zigbee2mqtt).
 devices: devices.yaml
 groups: groups.yaml
+
+# Block devices from the network (by ieeeAddr).
+blocklist: []
