community/zigbee2mqtt: remove default config, use onboarding webpage

--- a/community/zigbee2mqtt/APKBUILD
+++ b/community/zigbee2mqtt/APKBUILD
@@ -22,7 +22,7 @@ makedepends="
 	"
 pkgusers="zigbee2mqtt"
 pkggroups="$pkgusers"
-install="$pkgname.pre-install $pkgname.post-install"
+install="$pkgname.pre-install $pkgname.post-upgrade"
 subpackages="
 	$pkgname-dbg::noarch
 	$pkgname-openrc
@@ -31,8 +31,8 @@ source="https://github.com/Koenkk/zigbee2mqtt/archive/$pkgver/$pkgname-$pkgver.t
 	dont-build-on-start.patch
 	ungit.patch
 	rollup-wasm-node.patch
+	syslog-defaults.patch
 
-	configuration.yaml
 	$pkgname.initd
 	$pkgname.confd
 	"
@@ -81,10 +81,6 @@ package() {
 
 	install -d -m750 -o "$pkgusers" -g "$pkggroups" var/lib/$pkgname
 	ln -s /var/lib/$pkgname "$destdir"/data
-
-	install -D -m644 -o "$pkgusers" -g "$pkggroups" "$srcdir"/configuration.yaml -t etc/$pkgname/
-	ln -s /etc/$pkgname/configuration.yaml var/lib/$pkgname/configuration.yaml
-	ln -s /etc/$pkgname/secret.yaml var/lib/$pkgname/secret.yaml
 
 	install -D -m755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -D -m644 "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
@@ -142,7 +138,7 @@ d1eee5e3fdbfb64ba2aec56a9fcd9d7293a21922a2b74f69b7f841d19bdd0e2cb6c9e4b40945c0f7
 8dae6f02d13c60aae1823994e55d739e4a2341a48707ab2100704ced483326221b943ef8a43aa29929864a1c5ca131cf510029c9ad817474c5df34049124256f  dont-build-on-start.patch
 98e47c84451d73c94321dc8e881107b396a7cdc1bcc6927bbdfb16eaa067db5c675515551aa550e114542c7ae3c956b21000fecefb98db742adfd48d9796f8f4  ungit.patch
 a4871c906de9770cacd2bf652c50983464ff16ec9231b5d5e9bba0c98c91ff78bfb9bfc48ab5416556483c542a3c961d01f9beaf76a54489b0b8d6eacd934bda  rollup-wasm-node.patch
-77c86a1a6c1a0d06664cfce4360148fd7f83ab4d55194359441e65002555d1d9f50ff7e7ac3e5ffeebd7a945700b71fe62512b8f0769397de84f7d403f4da4b9  configuration.yaml
-74ffc0d00be0ed6d4a7a837e3f3e6b6f03f50fdd82bb0ea0694016549554364809dfe69befa4ff1031536ab2483194bb6d7bda7c8859233fa5b029e76432b689  zigbee2mqtt.initd
-cb84a6cbdfbbd6e7163289b4a2b7e4737c3549f679f1becc8c2327bd7a27be8f10666467551f8aa7d7dca3b17daf48d54aa451d85c76b02ccf12579c3528ea59  zigbee2mqtt.confd
+d10d089fef516b001e605e6844beda598ad88d3c8927eb06705657f545785e65b0e17979af39f31c7b3e49ee812d74809807376270ed3e1daf48f35b4d099612  syslog-defaults.patch
+6cfbd65780035951f0e4c1eae222c1964952a35ede38b6b227bc0c74baa019e03eb0c6ab5eb572286ec2b0b79b27123c4f1b83015cdb0683b99630cf0b265cce  zigbee2mqtt.initd
+25470cf3b2c717317f5962c99415c3c5f94d959fed1589695e9a01e3d9d72059862608b584c4b6381db995e032dfcb870662b82d1c086d6f86041de330fa2fa0  zigbee2mqtt.confd
 "
