community/zigbee2mqtt: enable on armhf riscv64 x86, disable s390x

--- a/community/zigbee2mqtt/APKBUILD
+++ b/community/zigbee2mqtt/APKBUILD
@@ -5,11 +5,9 @@ pkgver=2.3.0
 pkgrel=0
 pkgdesc="Zigbee to MQTT bridge"
 url="https://www.zigbee2mqtt.io/"
-# armhf: some tests timeout and I don't care about armhf
 # ppc64le: fails to build @serialport/bindings
-# riscv64: tsc Maximum call stack size exceeded
-# x86: textrel
-arch="all !armhf !ppc64le !riscv64 !x86"
+# s390x: tests fail due to @rollup/wasm-node
+arch="all !ppc64le !s390x"
 # zigbee2mqtt is GPL-3.0, other licenses are for its dependencies.
 license="GPL-3.0-only AND MIT AND ISC AND BSD-3-Clause AND BlueOak-1.0.0 AND Python-2.0"
 depends="nodejs"
@@ -37,6 +35,11 @@ source="https://github.com/Koenkk/zigbee2mqtt/archive/$pkgver/$pkgname-$pkgver.t
 	$pkgname.confd
 	"
 options="net"
+
+case "$CARCH" in
+	# Some tests timeout.
+	riscv64) options="!check";;
+esac
 
 # Don't let pnpm pollute $HOME.
 export XDG_CACHE_HOME="${tmpdir:-$srcdir}/.cache"
