community/zigbee2mqtt: add pre-upgrade notice about apk errors
See alpine/apk-tools#11110

--- a/community/zigbee2mqtt/APKBUILD
+++ b/community/zigbee2mqtt/APKBUILD
@@ -20,7 +20,11 @@ makedepends="
 	"
 pkgusers="zigbee2mqtt"
 pkggroups="$pkgusers"
-install="$pkgname.pre-install $pkgname.post-upgrade"
+install="
+	$pkgname.pre-install
+	$pkgname.pre-upgrade
+	$pkgname.post-upgrade
+	"
 subpackages="
 	$pkgname-dbg::noarch
 	$pkgname-openrc
