community/py3-anytree: upgrade to 2.13.0
https://github.com/c0fec0de/anytree/releases/tag/2.13.0

Includes fix for build error:

```
Traceback (most recent call last):
  File "/usr/bin/gpep517", line 6, in <module>
    sys.exit(main())
             ^^^^^^
  File "/usr/lib/python3.12/site-packages/gpep517/__main__.py", line 238, in main
    return func(args)
           ^^^^^^^^^^
  File "/usr/lib/python3.12/site-packages/gpep517/__main__.py", line 45, in build_wheel
    print(build_wheel_impl(args, args.wheel_dir), file=out)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/site-packages/gpep517/build.py", line 180, in build_wheel_impl
    wheel_name = backend.build_wheel(str(wheel_dir), args.config_json)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/site-packages/poetry/core/masonry/api.py", line 55, in build_wheel
    poetry = Factory().create_poetry(Path().resolve(), with_groups=False)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/site-packages/poetry/core/factory.py", line 59, in create_poetry
    raise RuntimeError("The Poetry configuration is invalid:\n" + message)
RuntimeError: The Poetry configuration is invalid:
  - project must contain ['name'] properties
```

Upstream PR: https://github.com/c0fec0de/anytree/pull/271

--- a/community/py3-anytree/APKBUILD
+++ b/community/py3-anytree/APKBUILD
@@ -2,18 +2,17 @@
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=py3-anytree
 _pkgname=anytree
-pkgver=2.12.1
-pkgrel=2
+pkgver=2.13.0
+pkgrel=0
 pkgdesc="Simple, lightweight and extensible Tree data structure"
 url="https://github.com/c0fec0de/anytree"
 arch="noarch"
 license="Apache-2.0"
 depends="py3-six"
-makedepends="py3-gpep517 poetry"
-checkdepends="py3-pytest graphviz"
+makedepends="py3-gpep517 poetry py3-pdm-backend"
+checkdepends="py3-pytest py3-pytest-cov py3-yaml graphviz"
 subpackages="$pkgname-pyc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/c0fec0de/anytree/archive/$pkgver.tar.gz
-	tests-tmpdir.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/c0fec0de/anytree/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
@@ -25,7 +24,12 @@ build() {
 check() {
 	python3 -m venv --clear --system-site-packages .testenv
 	.testenv/bin/python3 -m installer .dist/*.whl
-	.testenv/bin/python3 -m pytest
+	# ModuleNotFoundError: No module named 'test2ref'
+	.testenv/bin/python3 -m pytest \
+		--ignore tests/test_dotexport.py \
+		--ignore tests/test_dotexporter.py \
+		--ignore tests/test_mermaidexporter.py \
+		--ignore tests/test_uniquedotexporter.py
 }
 
 package() {
@@ -34,6 +38,5 @@ package() {
 }
 
 sha512sums="
-02e8579122d7ca80e377abf4c41831ad347637acded66b73e24d212c06f03c61ca11c1a17cac54b87806b7eaf227ce0c128d4afeabcb20fb233a2da10497fa11  py3-anytree-2.12.1.tar.gz
-9f8c53841b333e16915d15fd0138a71d4483e844f4cc9bdc42e3bed101a756acded459e6ddd51d765f13963371dba76f9595fc02d80699f53ef347d67663ee2c  tests-tmpdir.patch
+f587449b78877ee7f9ed1dedf88d55c75c05567fd7fe780808b2852152308a4bf2d42651fe1967b9eb67021ca33daa29ed387847ad93261ff93dfda356b4f296  py3-anytree-2.13.0.tar.gz
 "
