community/cargo-tarpaulin: enable on x86

--- a/community/cargo-tarpaulin/APKBUILD
+++ b/community/cargo-tarpaulin/APKBUILD
@@ -4,14 +4,17 @@ pkgver=0.32.4
 pkgrel=0
 pkgdesc="Code coverage tool for Rust projects"
 url="https://github.com/xd009642/tarpaulin"
-arch="all !x86" # build fails on x86: https://github.com/xd009642/tarpaulin/issues/1468
+arch="all"
 license="Apache-2.0 OR MIT"
 depends="cargo"
 makedepends="
 	cargo-auditable
 	openssl-dev
 	"
-source="https://github.com/xd009642/tarpaulin/archive/refs/tags/$pkgver/cargo-tarpaulin-$pkgver.tar.gz"
+source="
+	https://github.com/xd009642/tarpaulin/archive/refs/tags/$pkgver/cargo-tarpaulin-$pkgver.tar.gz
+	fix-x86.patch
+	"
 builddir="$srcdir/tarpaulin-$pkgver"
 options="net !check" # tests broken
 
@@ -42,4 +45,5 @@ package() {
 
 sha512sums="
 7616a5cc4ea90d9b0c2806d5fdd9322d0108262427ea33c89265645d6365e9f39370749c810114089359815fd0e4b74136ebfb257279536d05aac2a2df98a99a  cargo-tarpaulin-0.32.4.tar.gz
+85a837ad653fa61270ed5ae01ffd53ff70fff6fc008f93b1ab1e3630e89718fa3e8bc09be4ca844e2c6e2cd45e5859dcff109adbbc8b59c84fbd54b1f7371222  fix-x86.patch
 "
