--- a/community/qt6-qtspeech/APKBUILD
+++ b/community/qt6-qtspeech/APKBUILD
@@ -6,7 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Qt6 module to make text to speech and speech recognition easy"
 url="https://qt.io/"
-arch="all"
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	alsa-lib-dev
