--- a/community/qt6-qtlocation/APKBUILD
+++ b/community/qt6-qtlocation/APKBUILD
@@ -6,7 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Helps you create viable mapping solutions using the data available from some of the popular location services"
 url="https://qt.io/"
-arch="all"
+arch="all !armhf"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends="xdg-utils"
 depends_dev="
