main/skalibs: upgrade to 2.14.4.0

--- a/main/skalibs/APKBUILD
+++ b/main/skalibs/APKBUILD
@@ -1,5 +1,5 @@
-# Contributor: John Regan <john@jrjrtech.com>
 # Maintainer: Laurent Bercot <ska-devel@skarnet.org>
+
 pkgname=skalibs
 # NOTE: If you're upgrading to a new version that fixes some security
 # vulnerability in the APIs used by utmps (mainly timed ipcs),
@@ -8,7 +8,7 @@ pkgname=skalibs
 # - mingetty
 # - openssh
 # - util-linux
-pkgver=2.14.3.0
+pkgver=2.14.4.0
 pkgrel=0
 pkgdesc="Set of general-purpose C programming libraries for skarnet.org software."
 url=https://skarnet.org/software/skalibs/
@@ -16,20 +16,20 @@ arch="all"
 license="ISC"
 options="!check"
 subpackages="$pkgname-static $pkgname-libs $pkgname-dev $pkgname-doc"
-source="https://skarnet.org/software/skalibs/skalibs-$pkgver.tar.gz skalibs.pc.in"
+source="https://skarnet.org/software/skalibs/skalibs-$pkgver.tar.gz"
 
 build() {
 	./configure \
 		--prefix=/usr \
+		--enable-pkgconfig \
 		--with-sysdep-devurandom=yes \
-		--with-sysdep-posixspawnearlyreturn=no
+		--with-sysdep-posixspawnearlyreturn=no \
+		--with-sysdep-procselfexe=/proc/self/exe
 	make
 }
 
 package() {
 	make DESTDIR="$pkgdir" install
-	sed -e "s/@@VERSION@@/$pkgver/g;" "$srcdir/$pkgname.pc.in" > "$srcdir/$pkgname.pc"
-	install -D -m 0644 "$srcdir/$pkgname.pc" "$pkgdir/usr/lib/pkgconfig/$pkgname.pc"
 	mkdir -p "$pkgdir/usr/share/doc"
 	cp -a "$builddir/doc" "$pkgdir/usr/share/doc/$pkgname"
 }
@@ -40,6 +40,5 @@ dev() {
 }
 
 sha512sums="
-f40222740494425477252e78c772edda3f6cb201723558c513acb6c87d55a0f3432c918acf112c9457ed3ff0ee71bf5192f61b1c9070e668f219fd6d3f6f3bfa  skalibs-2.14.3.0.tar.gz
-5771f0e72e7e7e9a45cafdf2e4508938a29ff9474845c897e383004b031ad142dee1b65d83a9a0168696782163cb4a32f82db4d7360413b433e68282cd4cc487  skalibs.pc.in
+a97c9ecd62e4d751a6613c01831bff5856c5d23f8fd295d539c3280c6ffa2379e67789c728552cb4d85aa03b30af7e2499b80cb8025b52ca6d1c1746b48102b1  skalibs-2.14.4.0.tar.gz
 "
